# Amazonia

./: CONTRIBUTORS  CONTRIBUTORS.md  CreateBackup.sh  Makefile  Readme.md
Abacaxi/: Makefile
Abacaxi/src/: main.c  main.cpp
Acai/: Makefile
Acai/lib/: caixa_registradora.h
Acai/src/: caixa_registradora.c  main.c
Araca/: Makefile
Araca/src/: main.cpp
Araucaria/: Readme.md
Araucaria/ElfPet/: Makefile
Araucaria/Forca/: Makefile
Araucaria/GuessGame/: Makefile
Bacuri/CriarSignature/: GemReadme  Gemfile  Makefile  main.rb
Bacuri/RecursiveCopy/: Gemfile  Makefile  main.rb
Bacuri/WebServer/: Gemfile  Makefile  README.md  socket.rb
Buriti/: README.md
Buriti/Ada/: main.adb
Buriti/Assembly/: main.asm
Buriti/Awk/: main.awk
Buriti/C/: main.c
Buriti/Cobol/: main.cbl
Buriti/Cpp/: main.cpp
Buriti/Eletronica/: Makefile
Buriti/Elixir/: main.exs
Buriti/Go/: main.go
Buriti/Java/: main.java
Buriti/JavaScript/: main.js
Buriti/Kotlin/: main.kt
Buriti/Lisp/: main.lisp
Buriti/Lua/: main.lua
Buriti/Nim/: main.nim
Butia/: COPYING  Makefile
Cagaita/: Makefile
Caju/: Makefile
Cambuca/: Info.txt
Cambuci/: Makefile  Readme.md
Cambui/: Makefile  Readme.md
Camucamu/: Makefile
Canistel/: Cargo.toml  Makefile  Readme.md
Cupuacu/: Readme.txt
Gabiroba/: Makefile  Readme.md
Graviola/: Readme.md  Readme.txt
Guarana/: Makefile  Readme.md
Jaboticaba/: main.py
Murici/: Readme.md
Pitanga/: Makefile  Readme.md
Santol/: Makefile
Tapereba/: Makefile
Tucuma/Rust/: Cargo.toml  Makefile
Tucuma/Rust/src/: main.rs
(+130 files in other folders)
